--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(teo_proyecto)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(teo_proyecto main.cpp funciones.h funciones.cpp tipos.h methods.cpp methodsP2.cpp class.h)
+add_executable(teo_proyecto main.cpp funciones.h funciones.cpp tipos.h methods.cpp methodsP2.cpp class.h methodsP3.cpp methodsP4.cpp)
